--- a/rootless-podman/Dockerfile.ubuntu
+++ b/rootless-podman/Dockerfile.ubuntu
@@ -3,9 +3,9 @@ FROM ubuntu:22.04
 USER root
 
 # Install dependencies
-RUN apt-get update && apt-get install -y sudo gnupg2 curl vim fuse-overlayfs libvshadow-utils
+RUN apt-get update && apt-get install -y sudo gnupg2 curl vim fuse-overlayfs libvshadow-utils openssh-client
 
-# Install podman 
+# Install podman
 RUN mkdir -p /etc/apt/keyrings
 RUN curl -fsSL https://download.opensuse.org/repositories/devel:kubic:libcontainers:unstable/xUbuntu_22.04/Release.key \
   | gpg --dearmor \
@@ -16,16 +16,30 @@ RUN echo \
   | tee /etc/apt/sources.list.d/devel:kubic:libcontainers:unstable.list > /dev/null
 RUN apt-get update && apt-get -y install podman
 
+RUN setcap cap_setuid+ep /usr/bin/newuidmap
+RUN setcap cap_setgid+ep /usr/bin/newgidmap
+RUN chmod 0755 /usr/bin/newuidmap
+RUN chmod 0755 /usr/bin/newgidmap
+
+RUN useradd podman
+RUN echo "podman:100000:65536" > /etc/subuid
+RUN echo "podman:100000:65536" > /etc/subgid
+RUN echo "podman ALL=(ALL) NOPASSWD:ALL" | sudo tee -a /etc/sudoers
+
 ADD containers.conf /etc/containers/containers.conf
+
 ADD storage.conf /etc/containers/storage.conf
 RUN chmod 644 /etc/containers/containers.conf && \ 
   chmod 644 /etc/containers/storage.conf
 
-RUN sed -e 's|^#mount_program|mount_program|g' \
-           -e '/additionalimage.*/a "/var/lib/shared",' \
-           -e 's|^mountopt[[:space:]]*=.*$|mountopt = "nodev,fsync=0"|g' \
-           /usr/share/containers/storage.conf \
-           > /etc/containers/storage.conf
+RUN mkdir -p /home/podman/.local/share/containers && \
+    chown podman:podman -R /home/podman && \
+    chmod 644 /etc/containers/containers.conf
+
+# Note VOLUME options must always happen after the chown call above
+# RUN commands can not modify existing volumes
+VOLUME /var/lib/containers
+VOLUME /home/podman/.local/share/containers
 
 RUN mkdir -p /var/lib/shared/overlay-images \
              /var/lib/shared/overlay-layers \
@@ -36,17 +50,4 @@ RUN mkdir -p /var/lib/shared/overlay-images \
     touch /var/lib/shared/vfs-images/images.lock && \
     touch /var/lib/shared/vfs-layers/layers.lock
 
-RUN useradd podman \
-      --create-home \
-      --shell=/bin/bash \
-      --uid=1000 \
-      --user-group && \
-    echo "podman ALL=(ALL) NOPASSWD:ALL" >>/etc/sudoers.d/nopasswd
-
-RUN printf 'podman:1:999\npodman:1001:64535' | sudo tee /etc/subuid
-RUN printf 'podman:1:999\npodman:1001:64535' | sudo tee /etc/subgid
-
-USER podman
-
 ENV _CONTAINERS_USERNS_CONFIGURED=""
-
