--- a/rootless-podman/Dockerfile.fedora
+++ b/rootless-podman/Dockerfile.fedora
@@ -1,1 +1,28 @@
-FROM quay.io/podman/stable
+FROM registry.fedoraproject.org/fedora:latest
+
+RUN dnf -y update && \
+    rpm --setcaps shadow-utils 2>/dev/null && \
+    dnf -y install podman fuse-overlayfs openssh-clients \
+        --exclude container-selinux && \
+    dnf clean all && \
+    rm -rf /var/cache /var/log/dnf* /var/log/yum.*
+
+RUN useradd podman; \
+echo -e "podman:1:999\npodman:1001:64535" > /etc/subuid; \
+echo -e "podman:1:999\npodman:1001:64535" > /etc/subgid;
+
+ADD containers.conf /etc/containers/containers.conf
+ADD storage.conf /etc/containers/storage.conf
+RUN chmod 644 /etc/containers/containers.conf && \ 
+    chmod 644 /etc/containers/storage.conf
+
+RUN mkdir -p /var/lib/shared/overlay-images \
+             /var/lib/shared/overlay-layers \
+             /var/lib/shared/vfs-images \
+             /var/lib/shared/vfs-layers && \
+    touch /var/lib/shared/overlay-images/images.lock && \
+    touch /var/lib/shared/overlay-layers/layers.lock && \
+    touch /var/lib/shared/vfs-images/images.lock && \
+    touch /var/lib/shared/vfs-layers/layers.lock
+
+ENV _CONTAINERS_USERNS_CONFIGURED=""
