--- a/rootless-podman/Dockerfile.fedora
+++ b/rootless-podman/Dockerfile.fedora
@@ -25,4 +25,9 @@ RUN mkdir -p /var/lib/shared/overlay-images \
     touch /var/lib/shared/vfs-images/images.lock && \
     touch /var/lib/shared/vfs-layers/layers.lock
 
+# Alias "docker" to "podman"
+RUN ln -s /usr/bin/podman /usr/bin/docker
+
+USER podman
+
 ENV _CONTAINERS_USERNS_CONFIGURED=""
