allow manyual dispatch

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -6,6 +6,8 @@ on:
       - main
     paths:
       - "rootless-podman/**.Dockerfile"
+  workflow_dispatch:
+
 jobs:
   push:
     runs-on: ubuntu-latest
